--- a/build.gradle
+++ b/build.gradle
@@ -9,10 +9,12 @@ version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
 mainClassName = 'App'
+applicationName ='hero2squad'
+task stage (dependsOn: ['clean','installDist'])
 
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 dependencies {
@@ -20,4 +22,10 @@ dependencies {
     compile "com.sparkjava:spark-core:2.6.0"
     compile "com.sparkjava:spark-template-handlebars:2.5.5"
     compile 'org.slf4j:slf4j-simple:1.7.21'
+}
+
+test {
+	testLogging {
+			exceptionFormat ='full' events "passed", "skipped", "failed" 
+    } 
 }
