--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,10 @@ plugins {
 }
 
 version '1.0-SNAPSHOT'
+archivesBaseName = "hero-squad"
 
 sourceCompatibility = 1.8
 
-mainClassName = 'App'
-
-applicationName = 'hero-squad'
-task stage (dependsOn:['clean','installDist'])
 
 
 repositories {
@@ -19,12 +16,14 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile "com.sparkjava:spark-core:2.6.0"
+    compile group: 'com.sparkjava', name: 'spark-core', version: '2.3'
+    testCompile group: 'junit', name: 'junit', version: '4.+'
     compile "com.sparkjava:spark-template-handlebars:2.5.5"
     compile 'org.slf4j:slf4j-simple:1.7.21'
-    compile 'com.sparkjava:spark-template-velocity:2.5.5' 
-
+    compile group: 'org.apache.velocity', name: 'velocity', version: '1.7'
 }
 
+applicationName = "hero-squad"
+mainClassName = "App"
+task stage(dependsOn: ['clean', 'installDist'])
 
